@@ -1,3 +1,6 @@
+[B]v2.1.3 (17.01.2013)[/B]
+- Fix:    urlib.unquote_plus() changed to HTMLParser().unescape()
+
 [B]v2.1.2 (03.01.2013)[/B]
 - Fix:    Frodo version numbers for add-on and xbmc.python
 
